fixed z-depth issues, replaced overflow clipping with smooth gradient

--- a/public/explore/global.css
+++ b/public/explore/global.css
@@ -29,6 +29,10 @@ h3 {
   color: #404055;
 }
 
+h2:not(:first-child) {
+  margin-top: 2rem;
+}
+
 body,
 a {
   color: #3f3f52;
